# scale-ops

./: .gitignore  README.md  pyproject.toml  requirements.txt  scalability-corr-cv.ipynb  scalability-data.ipynb  scalibility-laws.ipynb  scaling-laws.ipynb  setup.cfg  setup.py
scaleops/: kube_port_forwarder.py  parquet_file_cache.py  promql_pandas.py  promqlpandas.py  scenario.py  scenario_session.py  scenariometrics.py
tests/: test_promql_pandas.py  test_promqlpandas.py  test_promqlpandas_k8s.py  test_scenario_session.py
