[metadata]
name = scaleops
version = 0.3.2
author = Richard Bellamy
author_email = rbellamy@pteradigm.com
description = Scalability Operations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rbellay/scale-ops
project_urls =
    Bug Tracker = https://github.com/rbellamy/scale-opts/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    jupyter
    pandas
    numpy
    sympy
    requests
