[metadata]
name = scaleops
version = 0.7.0
author = Richard Bellamy
author_email = rbellamy@pteradigm.com
description = Scalability Operations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Nuvalence/scale-ops
project_urls =
    Bug Tracker = https://github.com/Nuvalence/scale-ops/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    jupyterlab
    pandas
    numpy
    sympy
    requests
    pyarrow
    kubernetes
